[package]
name = "webos-standby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color_processing = "0.6.1"
eyre = "0.6.8"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer"]
